2001-06-03  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mailq.c:
	    Oops time; closing FILE * object twice is BAD THING to do
	    in some cases.  Must not do so.  Early closing of the
	    underlying read socket is ok.

	* proto/smtpserver.conf.in:
	    In  smtp-auth  related PARAMs, do emphasise their security
	    implications!

2001-05-30  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/scheduler.c, scheduler/msgerror.c, scheduler/qprint.c,
	  scheduler/threads.c, scheduler/transport.c, scheduler/update.c:
	    I suspect that in certain cases the scheduler should do
	    "resync" on message file instead of just logging a complaint
	    into stderr like it now does at the end of  findvertex().
	    Adding some debugging data so that I can verify the thing.

2001-05-25  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* README.UPGRADING:
	    Semi-forgotten note about the results of 2001-05-15's
	    libta/dianostic.c + scheduler/update.c + smtp TA/scheduler
	    interaction protocol detail.  You can have NEWER scheduler,
	    than smtp-ta, because this is backwards channel detail.

	* lib/cfgets.c:
	    Darryl Miles <darryl@netbauds.net>  found strange looking
	    problem with certain kind of "malformed" input for scheduler
	    configuration file.  Turns out that when this function
	    encounters EOF, and it isn't at the beginning of the line,
	    the line buffer never gets zero-terminated causing possibly
	    strange side-effects when thus revealed previous content of
	    the buffer may reappear.

	    Additional coding to always zero-terminate the allocated buffer.
	    The code is being used both as classical  fgets(),  but also
	    by returning exact number of characters collected.

	    I am doubtfull that the previous state was in any way capable
	    to produce system security threat.

2001-05-22  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/fqdnaliases.cf, proto/cf/process.cf,