@@ -1,3 +1,12 @@
+2001-06-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
+	  smtpserver/smtptls.c, smtpserver/smtpdata.c:
+	    Got rid of all  alarm()  calls in the server code, and use
+	    select() instead everywhere.  Along with NON-BLOCKING sockets.
+	    The previous code has apparently allowed accumulation of servers
+	    which never die out...
+
 2001-06-03  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* scheduler/mailq.c:
